--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,13 +1,13 @@
 {
   "compilerOptions": {
-    "target": "es5",                          /* Specify ECMAScript target version: 'ES3' (default), 'ES5', 'ES2015', 'ES2016', 'ES2017', 'ES2018', 'ES2019', 'ES2020', or 'ESNEXT'. */
-    "module": "commonjs",                     /* Specify module code generation: 'none', 'commonjs', 'amd', 'system', 'umd', 'es2015', 'es2020', or 'ESNext'. */
-    "strict": true,                           /* Enable all strict type-checking options. */
+    "target": "es5",
+    "module": "commonjs",
+    "strict": true,
     "lib": [
       "dom",
       "es6"
-    ],         
-    "forceConsistentCasingInFileNames": true, /* Disallow inconsistently-cased references to the same file. */
+    ],
+    "forceConsistentCasingInFileNames": true,
     "outDir": "dist"
   }
 }
