--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,6 +2,7 @@
   "compilerOptions": {
     "target": "es5",
     "module": "commonjs",
+    // "strictNullChecks": true,
     "strict": true,
     "lib": [
       "dom",
